--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -1,71 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Controle de Estoque - Quitanda do Ailton Krenak</title>
-</head>
-<body>
-    <header>
-        <p>Quitanda do Ailton Krenak</p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header-other-pages">
+      <p>Quitanda do Ailton Krenak</p>
     </header>
-    
+
     <nav>
-        <a href="index.html">Página Inicial |</a>
-        <a href="ctrl-estoque.html">Controle de Estoque |</a>
-        <a href="add-produto.html">Adicionar Produto |</a>
-        <a href="funcionarios.html">Funcionários</a>
+      <a class="ref-nav" href="index.html">Página Inicial |</a>
+      <a class="ref-nav" href="ctrl-estoque.html">Controle de Estoque |</a>
+      <a class="ref-nav" href="add-produto.html">Adicionar Produto |</a>
+      <a class="ref-nav" href="funcionarios.html">Funcionários |</a>
+      <a class="ref-nav" href="venda.html">Vendas |</a>
+      <a class="ref-nav" href="historico-venda.html">Histórico de Vendas</a>
     </nav>
 
     <h2>Controle de Estoque</h2>
 
-    <table>
+    <div>
+      <table>
         <tr>
-            <th>Foto</th>
-            <th>Descrição</th>
-            <th>Preço (R$)</th>
-            <th>Quantidade disponível</th>
+          <th>Foto</th>
+          <th>Descrição</th>
+          <th>Preço (R$)</th>
+          <th>Quantidade disponível</th>
         </tr>
 
         <tr>
-            <td><img src="./img/abacate.png" alt="Abacate" width="250"/></td>
-            <td> Abacate </td>
-            <td> R$ 2,00 </td>
-            <td> 40 </td>
+          <td><img src="./img/abacate.png" alt="Abacate" width="250" /></td>
+          <td>Abacate</td>
+          <td>R$ 2,00</td>
+          <td>40</td>
         </tr>
 
         <tr>
-            <td><img src="./img/abacaxi.png" alt="Abacaxi" width="290"/></td>
-            <td> Abacaxi </td>
-            <td> R$ 2,90 </td>
-            <td> 20 </td>
+          <td><img src="./img/abacaxi.png" alt="Abacaxi" width="290" /></td>
+          <td>Abacaxi</td>
+          <td>R$ 2,90</td>
+          <td>20</td>
         </tr>
 
         <tr>
-            <td><img src="./img/laranja.png" alt="Laranja" width="200"/></td>
-            <td> Laranja </td>
-            <td> R$ 2,10 </td>
-            <td> 50 </td>
+          <td><img src="./img/laranja.png" alt="Laranja" width="200" /></td>
+          <td>Laranja</td>
+          <td>R$ 2,10</td>
+          <td>50</td>
         </tr>
 
         <tr>
-            <td><img src="./img/maca.png" alt="Maçã" width="190"/></td>
-            <td> Maçã </td>
-            <td> R$ 3,30 </td>
-            <td> 47 </td>
+          <td><img src="./img/maca.png" alt="Maçã" width="190" /></td>
+          <td>Maçã</td>
+          <td>R$ 3,30</td>
+          <td>47</td>
         </tr>
-        
+
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
 
         <tr>
-            <td><img src="./img/morango.png" alt="Morango" width="190"/></td>
-            <td> Morango </td>
-            <td> R$ 4,70 </td>
-            <td> 70 </td>
+          <td><img src="./img/morango.png" alt="Morango" width="190" /></td>
+          <td>Morango</td>
+          <td>R$ 4,70</td>
+          <td>70</td>
         </tr>
-
-    </table>
-
-</body>
+      </table>
+    </div>
+    <footer id="rodape-ctrl-estoque">
+      <p>Siga-nos nas redes sociais!</p>
+      <a href="https://www.facebook.com/Labenu-388131481831991/" target="_blank"
+        ><img src="./img/facebook.png" alt="Facebook" width="40"
+      /></a>
+      <a href="https://www.instagram.com/labenu_/" target="_blank"
+        ><img src="./img/instagram.png" alt="Instagram" width="40"
+      /></a>
+      <a href="https://twitter.com/labenu_" target="_blank"
+        ><img src="./img/twitter.png" alt="Twitter" width="40"
+      /></a>
+    </footer>
+  </body>
 </html>
