--- a/modulo1/html-sistema-loja/template-loja/venda.html
+++ b/modulo1/html-sistema-loja/template-loja/venda.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Funcionários - Quitanda do Ailton Krenak</title>
+    <title>Histórico de Vendas - Quitanda do Ailton Krenak</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,17 +21,6 @@
       <a class="ref-nav" href="historico-venda.html">Histórico de Vendas</a>
     </nav>
 
-    <h2>Funcionários</h2>
-    <div id="div-funcionario">
-      <ul>
-        <li>Bruno Silva</li>
-        <li>Eliana Cristina de Deus Santos</li>
-        <li>Índio Medeiros</li>
-        <li>Luiz Barbosa</li>
-        <li>Paula Oliveira</li>
-        <li>Paulo Henrique Correa da Silva</li>
-      </ul>
-    </div>
     <footer id="rodape">
       <p>Siga-nos nas redes sociais!</p>
       <a href="https://www.facebook.com/Labenu-388131481831991/" target="_blank"
