--- a/modulo1/html-sistema-loja/template-loja/venda.html
+++ b/modulo1/html-sistema-loja/template-loja/venda.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Histórico de Vendas - Quitanda do Ailton Krenak</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Vendas - Quitanda do Ailton Krenak</title>
+    <link rel="stylesheet" href="style-vendas.css" />
   </head>
   <body>
     <header class="header-other-pages">
