--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Controle de Estoque - Quitanda do Ailton Krenak</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-ctrl-estoque.css" />
   </head>
   <body>
     <header class="header-other-pages">
