--- a/modulo1/html-sistema-loja/template-loja/index.html
+++ b/modulo1/html-sistema-loja/template-loja/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Página Inicial - Quitanda do Ailton Krenak</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-index.css" />
   </head>
   <body>
     <header id="main-header">
