salvando por garantia

--- a/modulo1/html-sistema-loja/template-loja/historico-venda.html
+++ b/modulo1/html-sistema-loja/template-loja/historico-venda.html
@@ -21,6 +21,22 @@
       <a class="ref-nav" href="historico-venda.html">Histórico de Vendas</a>
     </nav>
 
+    <h2>Histórico de Vendas</h2>
+    <div>
+      <table>
+        <tr>
+          <th>Vendedor</th>
+          <th>Valor Total</th>
+          <th>Forma de Pagamento</th>
+        </tr>
+        <tr>
+          <td> |</td>
+          <td> |</td>
+          <td> |</td>
+        </tr>
+      </table>
+    </div>
+
     <footer id="rodape">
       <p>Siga-nos nas redes sociais!</p>
       <a href="https://www.facebook.com/Labenu-388131481831991/" target="_blank"
