--- a/modulo1/html-sistema-loja/template-loja/venda.html
+++ b/modulo1/html-sistema-loja/template-loja/venda.html
@@ -21,6 +21,35 @@
       <a class="ref-nav" href="historico-venda.html">Histórico de Vendas</a>
     </nav>
 
+    <h2>Vendas</h2>
+
+    <div>
+      <form action="#">
+        <label for="cliente">Cliente: </label>
+        <input type="text" id="cliente" name="cliente" />
+        <br />
+        <label for="lista-produtos">Lista de Produtos: </label>
+        <select id="lista-produtos" name="lista-produtos">
+          <option value="abacate">Abacate</option>
+          <option value="abacaxi">Abacaxi</option>
+          <option value="laranja">Laranja</option>
+          <option value="maca">Maçã</option>
+          <option value="morango">Morango</option>
+        </select>
+        <br />
+        <label for="qnt-produto">Quantidade: </label>
+        <input type="number" id="qnt-produto" name="qnt-produto" />
+        <br />
+        <label for="pagamento">Forma de Pagamento: </label>
+        <select name="pagamento" id="pagamento">
+          <option value="cartao-de-credito">Cartão de crédito</option>
+          <option value="dinheiro">Dinheiro</option>
+        </select>
+        <br />
+        <button type="submit">Finalizar</button>
+      </form>      
+    </div>
+
     <footer id="rodape">
       <p>Siga-nos nas redes sociais!</p>
       <a href="https://www.facebook.com/Labenu-388131481831991/" target="_blank"
