--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -4,44 +4,107 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Portfólio - Paulo Henrique Correa da Silva</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-        <img src="./img/minha-foto.png" alt="Foto do Paulo Henrique">
-        <h1>Paulo Henrique Correa da Silva</h1>
-        <p>Estudante, Gamer e futuro Desenvolvedor!</p>        
+      <img src="./img/minha-foto.png" alt="Foto do Paulo Henrique" />
+      <h1>Paulo Henrique Correa da Silva</h1>
+      <h3>Estudante, Gamer e futuro Desenvolvedor!</h3>
     </header>
     <main>
-        <div>
-            <h2>Olá,</h2>
-            <p>Meu nome é Paulo Henrique mas pode me chamar pelo meu apelido Mankey!</p>            
-            <p>Tenho 26 Anos e moro na cidade de Quatá interior de São Paulo.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat qui explicabo ratione possimus vel nemo. Ducimus explicabo distinctio illo molestiae quas tempore necessitatibus nihil tempora eos expedita in odit delectus quis itaque dicta quam magnam repudiandae voluptates harum illum accusantium, blanditiis ullam. Odit perferendis voluptatum deserunt dolorem placeat obcaecati ducimus ab cumque, eius soluta cupiditate aperiam consequatur earum ea? Ad, pariatur quasi. Qui quisquam vel ducimus aperiam similique optio et fuga aut libero officia nam totam perferendis rerum sit unde, blanditiis fugit, ipsa repudiandae consectetur nobis vero sunt nulla. Minus autem tempore, delectus facilis aut illum quis! Doloremque, voluptatem architecto odio beatae incidunt repellat quas, id nam illo quae sed corporis? Temporibus optio earum totam, veritatis sed error nulla dolorum. Impedit mollitia temporibus maiores nihil repudiandae? Consectetur incidunt amet ipsam, deserunt perferendis cumque. Quas possimus incidunt rerum porro ipsa repellat nemo a iusto temporibus atque quisquam expedita iste quae vel harum, autem assumenda ab accusantium, dolore explicabo voluptas beatae quasi eligendi! Ipsa in quibusdam eaque eum quod, voluptas cumque, illo, sapiente porro illum sint? Inventore voluptatum laborum nam dolores in eaque, hic doloremque, suscipit similique optio voluptates accusamus. Et iure expedita debitis! Autem ullam, vel rerum corporis aspernatur eligendi!</p>            
+      <div>
+        <h2>Olá</h2>
+        <p>
+          Meu nome é Paulo Henrique mas pode me chamar pelo meu apelido Mankey!
+        </p>
+        <p>Tenho 26 Anos e moro na cidade de Quatá interior de São Paulo.</p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam
+          repellat qui explicabo ratione possimus vel nemo. Ducimus explicabo
+          distinctio illo molestiae quas tempore necessitatibus nihil tempora
+          eos expedita in odit delectus quis itaque dicta quam magnam
+          repudiandae voluptates harum illum accusantium, blanditiis ullam. Odit
+          perferendis voluptatum deserunt dolorem placeat obcaecati ducimus ab
+          cumque, eius soluta cupiditate aperiam consequatur earum ea? Ad,
+          pariatur quasi. Qui quisquam vel ducimus aperiam similique optio et
+          fuga aut libero officia nam totam perferendis rerum sit unde,
+          blanditiis fugit, ipsa repudiandae consectetur nobis vero sunt nulla.
+          Minus autem tempore, delectus facilis aut illum quis! Doloremque,
+          voluptatem architecto odio beatae incidunt repellat quas, id nam illo
+          quae sed corporis? Temporibus optio earum totam, veritatis sed error
+          nulla dolorum. Impedit mollitia temporibus maiores nihil repudiandae?
+          Consectetur incidunt amet ipsam, deserunt perferendis cumque. Quas
+          possimus incidunt rerum porro ipsa repellat nemo a iusto temporibus
+          atque quisquam expedita iste quae vel harum, autem assumenda ab
+          accusantium, dolore explicabo voluptas beatae quasi eligendi! Ipsa in
+          quibusdam eaque eum quod, voluptas cumque, illo, sapiente porro illum
+          sint? Inventore voluptatum laborum nam dolores in eaque, hic
+          doloremque, suscipit similique optio voluptates accusamus. Et iure
+          expedita debitis! Autem ullam, vel rerum corporis aspernatur eligendi!
+        </p>
+      </div>
+      <div class="div-escolaridade">
+        <h2>Escolaridade</h2>
+        <div id="img-escolas">
+          <div>
+            <a href="https://www.cps.sp.gov.br/" target="_blank"
+              ><img src="./img/cps.png" alt="Centro Paula Souza"
+            /></a>
+          </div>
+          <div>
+            <a href="https://www.labenu.com.br/" target="_blank"
+              ><img src="./img/labenu.png" alt="Labenu"
+            /></a>
+          </div>
+          <div>
+            <a href="https://univesp.br/" target="_blank"
+              ><img src="./img/univesp.png" alt="Univesp"
+            /></a>
+          </div>
         </div>
-        <div>
-            <h2>Escolaridade</h2>
-            <ul>
-                <li>Cursado Técnico em Agropecrária integrado ao Ensino Médio na Etec Dr Luiz César Couto</li>
-                <li>Cursado Técnico em Informática na Etec Dr Luiz César Couto</li>
-                <li>Cursando Web Full Stack Integral na Labenu</li>
-                <li>Cursando Graduação EAD em Engranharia da Computação na Univesp</li>
-            </ul>            
+        <ul>
+          <li>
+            Cursado Técnico em Agropecrária integrado ao Ensino Médio na Etec Dr
+            Luiz César Couto - CPS
+          </li>
+          <li>
+            Cursado Técnico em Informática na Etec Dr Luiz César Couto - CPS
+          </li>
+          <li>Cursando Web Full Stack Integral na Labenu</li>
+          <li>
+            Cursando Graduação EAD em Engranharia da Computação na Univesp
+          </li>
+        </ul>
+      </div>
+      <div class="div-projeto">
+        <h2>Projetos de</h2>
+        <div id="projetos">
+          <div><a href="projeto-js.html"><img src="./img/js.png" alt="Javascript" /></a></div>
+          <div><a href="projeto-css-html.html"><img src="./img/css-html.png" alt="CSS e HTML" /></a></div>
         </div>
+      </div>
     </main>
     <footer>
-        <div class="formulario">
-            <form action="#">
-                <label for="nome">Nome</label>
-                <input type="text" id="nome">
-                <label for="email">E-Mail</label>
-                <input type="text" id="email">
-                <label for="mensagem">Mensagem</label>                
-                <input type="text" id="mensagem">
-                <button>Enviar</button>
-            </form>
+      <div id="div-footer">
+        <div id="sociais">
+          <p>Discord</p>
+          <p>Twitter</p>
+          <p>LinkedIn</p>
         </div>
+        <div id="formulario">
+          <form action="#">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" />
+            <label for="email">E-Mail</label>
+            <input type="text" id="email" />
+            <label for="mensagem">Mensagem</label>
+            <input type="text" id="mensagem" />
+            <button>Enviar</button>
+          </form>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
