--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -81,18 +81,21 @@
       <div class="div-projeto">
         <h2>Projetos de</h2>
         <div id="projetos">
-          <div><a href="projeto-js.html"><img src="./img/js.png" alt="Javascript" /></a></div>
-          <div><a href="projeto-css-html.html"><img src="./img/css-html.png" alt="CSS e HTML" /></a></div>
+          <div>
+            <a href="projeto-js.html"
+              ><img src="./img/js.png" alt="Javascript"
+            /></a>
+          </div>
+          <div>
+            <a href="projeto-css-html.html"
+              ><img src="./img/css-html.png" alt="CSS e HTML"
+            /></a>
+          </div>
         </div>
       </div>
     </main>
     <footer>
       <div id="div-footer">
-        <div id="sociais">
-          <p>Discord</p>
-          <p>Twitter</p>
-          <p>LinkedIn</p>
-        </div>
         <div id="formulario">
           <form action="#">
             <label for="nome">Nome</label>
@@ -102,6 +105,11 @@
             <label for="mensagem">Mensagem</label>
             <input type="text" id="mensagem" />
             <button>Enviar</button>
+            <div id="sociais">
+              <p>Discord</p>
+              <p>Twitter</p>
+              <p>LinkedIn</p>
+            </div>
           </form>
         </div>
       </div>
