--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -11,9 +11,13 @@
   <body>
     <div id="container">
       <header>
-        <div>
-          <img src="./img/bolinho.png" alt="ícone bolinho" />
-          <p>Confeitaria</p>
+        <div>          
+          <div>
+            <img src="./img/bolinho.png" alt="ícone bolinho" />
+          </div>
+          <div>
+            <p>Confeitaria</p>
+          </div>
         </div>
         <div>
           <button>Login</button>
