--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -96,7 +96,9 @@
           </div>
         </div>
       </main>
-      <footer>Bolos deliciosos feitos com muito carinho ♥</footer>
+      <footer>
+        <p>Bolos deliciosos feitos com muito carinho ♥</p>
+      </footer>
     </div>
   </body>
 </html>
