--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -1,104 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confeitaria</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <div id="container">
-      <header>
-        <div>          
-          <div>
-            <img src="./img/bolinho.png" alt="ícone bolinho" />
-          </div>
-          <div>
-            <p>Confeitaria</p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Confeitaria</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="container">
+    <header>
+      <div>
+        <div>
+          <img src="./img/bolinho.png" alt="ícone bolinho" />
         </div>
         <div>
-          <button>Login</button>
+          <p>Confeitaria</p>
         </div>
-      </header>
-      <main>
-        <div class="div-nav">
-          <div class="nav">
-            <img src="./img/home.webp" alt="ícone casinha" />
-            <div><p>HOME</p></div>
-            <img
-              src="./img/setinha-direita.webp"
-              alt="ícone setinha para direita"
-            />
+      </div>
+      <div>
+        <button>Login</button>
+      </div>
+    </header>
+    <main>
+      <div class="div-nav">
+        <div class="nav">
+          <img src="./img/home.webp" alt="ícone casinha" />
+          <div>
+            <p>HOME</p>
           </div>
-          <div class="nav">
-            <img src="./img/docinho.png" alt="ícone casinha" />
-            <div><p>PRODUTOS</p></div>
-            <img
-              src="./img/setinha-direita.webp"
-              alt="ícone setinha para direita"
-            />
-          </div>
-          <div class="nav">
-            <img src="./img/carrinho.png" alt="ícone casinha" />
-            <div><p>CARRINHO</p></div>
-            <img
-              src="./img/setinha-direita.webp"
-              alt="ícone setinha para direita"
-            />
-          </div>
-          <div class="nav">
-            <img src="./img/perfil.png" alt="ícone casinha" />
-            <div><p>PERFIL</p></div>
-            <img
-              src="./img/setinha-direita.webp"
-              alt="ícone setinha para direita"
-            />
-          </div>
+          <img src="./img/setinha-direita.webp" alt="ícone setinha para direita" />
         </div>
-        <div class="div-main">
-          <div class="card card1">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        <div class="nav">
+          <img src="./img/docinho.png" alt="ícone casinha" />
+          <div>
+            <p>PRODUTOS</p>
           </div>
-          <div class="card card2">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
-          <div class="card card3">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
-          <div class="card card4">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
-          <div class="card card5">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
-          <div class="card card6">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
-          <div class="card card7">
-            <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
-            <h2>Bolo de Chocolate</h2>
-            <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
-          </div>
+          <img src="./img/setinha-direita.webp" alt="ícone setinha para direita" />
         </div>
-      </main>
-      <footer>
-        <p>Bolos deliciosos feitos com muito carinho ♥</p>
-      </footer>
-    </div>
-  </body>
+        <div class="nav">
+          <img src="./img/carrinho.png" alt="ícone casinha" />
+          <div>
+            <p>CARRINHO</p>
+          </div>
+          <img src="./img/setinha-direita.webp" alt="ícone setinha para direita" />
+        </div>
+        <div class="nav">
+          <img src="./img/perfil.png" alt="ícone casinha" />
+          <div>
+            <p>PERFIL</p>
+          </div>
+          <img src="./img/setinha-direita.webp" alt="ícone setinha para direita" />
+        </div>
+      </div>
+      <div class="div-main">
+        <div class="card card1">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card2">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card3">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card4">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card5">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card6">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+        <div class="card card7">
+          <img src="./img/bolo-bonito.jpg" alt="Foto de bolo bonito" />
+          <h2>Bolo de Chocolate</h2>
+          <p>Delicioso bolo de chocolate molhadinho decorado com morangos</p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>Bolos deliciosos feitos com muito carinho ♥</p>
+    </footer>
+  </div>
+</body>
+
 </html>
