--- a/modulo1/css-labetube/exercicio3/exercicio3a/exercicio3a.html
+++ b/modulo1/css-labetube/exercicio3/exercicio3a/exercicio3a.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="bot-container">
             <div class="purple-background"> FOOTER </div>
         </div>
     </div>
