Atividade do labetube

--- a/modulo1/css-labetube/index.html
+++ b/modulo1/css-labetube/index.html
@@ -12,10 +12,12 @@
 <body>
     <div id="container">
         <header>
-            <a href="./index.html">
-                <p class="logo">LabeTUBE</p>
-            </a>
-            <div>
+            <div class="div-logo">
+                <a href="./index.html">
+                    <p class="logo">LabeTUBE</p>
+                </a>
+            </div>
+            <div class="div-pesquisa">
                 <input placeholder="Pesquisar" type="text" id="bar-search">
                 <img class="icon-search" src="https://static.thenounproject.com/png/105498-200.png" alt="ícone lupa">
             </div>
@@ -24,7 +26,9 @@
             </div>
         </header>
         <main>
-            <h1>Vídeos</h1>
+            <div class="titulo-main">
+                <h1>Vídeos</h1>
+            </div>
             <div class="container-cards">
                 <div class="cards">
                     <a href="page-1.html"><video
