--- a/modulo1/css-labetube/page-1.html
+++ b/modulo1/css-labetube/page-1.html
@@ -12,10 +12,12 @@
 <body>
     <div id="container">
         <header>
-            <a href="./index.html">
-                <p class="logo">LabeTUBE</p>
-            </a>
-            <div>
+            <div class="div-logo">
+                <a href="./index.html">
+                    <p class="logo">LabeTUBE</p>
+                </a>
+            </div>
+            <div class="div-pesquisa">
                 <input placeholder="Pesquisar" type="text" id="bar-search">
                 <img class="icon-search" src="https://static.thenounproject.com/png/105498-200.png" alt="ícone lupa">
             </div>
@@ -24,10 +26,9 @@
             </div>
         </header>
         <main>
-            <h1>Vídeo</h1>
-            <div>
-                <video controls src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4"></video>
-            </div>
+            <h1 class="titulo-main">Vídeo</h1>
+            <video controls src="https://storage.googleapis.com/future-apis.appspot.com/9.mp4"></video>
+            
         </main>
         <footer>
             <div class="sociais">
